voxalfa-validator/src/tests/snapshots/voxalfa_validator__tests__utils__assert_diagnostic_snapshot-15.snap
---
source: voxalfa-validator/src/tests/utils.rs
expression: output
---
=== INPUT ===
[$] time={4,4} | voices={A}
---

[$] dynamics={f:0..3}

[A] |d :r !m :f ||

=== DIAGNOSTICS ===
error[E011]: range not allowed for this event
 --> range_not_allowed_error.vfa:5:1
  |
 5 | [$] dynamics={f:0..3}
   | ^^^^^^^^^^^^^^^^^^^^^ error
