voxalfa-validator/src/tests/snapshots/voxalfa_validator__tests__utils__assert_diagnostic_snapshot-2.snap
---
source: voxalfa-validator/src/tests/utils.rs
expression: output
---
=== INPUT ===
[$] time={4,4} | voices={S}
---

[S] |- :r !m :f ||

=== DIAGNOSTICS ===
error[E021]: invalid note prolongation
 --> invalid_prolongation_error.vfa:5:1
  |
 5 | [S] |- :r !m :f ||
   | ^^^^^^^^^^^^^^^^^^ error
