voxalfa-validator/src/tests/snapshots/voxalfa_validator__tests__utils__assert_diagnostic_snapshot-22.snap
---
source: voxalfa-validator/src/tests/utils.rs
expression: output
---
=== INPUT ===
[$] time={4,4} | voices={S}
---

[S] |`d :r !m :f |s :l !t :d+1 ||

=== DIAGNOSTICS ===
error[E018]: unmatched underline delimiter '`'
 --> unmatched_underline_error.vfa:5:1
  |
 5 | [S] |`d :r !m :f |s :l !t :d+1 ||
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ error
