voxalfa-validator/src/tests/snapshots/voxalfa_validator__tests__utils__assert_diagnostic_snapshot-24.snap
---
source: voxalfa-validator/src/tests/utils.rs
expression: output
---
=== INPUT ===
[$] time={4,4} | voices={S,T}
---

[S] |d :r !m :f |s :l !t :d+1 ||

=== DIAGNOSTICS ===
error[E017]: expected 2 voices, got 1
 --> voice_mismatch_error.vfa:3:1
  |
 2 | [$] time={4,4} | voices={S,T}
   | ----------------------------- voices defined here
 3 | ---
   | ^^^ error
