voxalfa-validator/src/tests/snapshots/voxalfa_validator__tests__utils__assert_diagnostic_snapshot-4.snap
---
source: voxalfa-validator/src/tests/utils.rs
expression: output
---
=== INPUT ===
[$] key={Z}

---

=== DIAGNOSTICS ===
error[E026]: 'voices' prameter has not been defined
 --> invalid_type_error.vfa:4:1
  |
 1 | 
   | - consider adding 'voice' metadata
 4 | ---
   | ^^^ error

error[E008]: invalid key
 --> invalid_type_error.vfa:2:1
  |
 2 | [$] key={Z}
   | ^^^^^^^^^^^ error
